examples/errors/15_insufficient_elements/definitions.tmd
group Widget;
group Root {
    +Widget(3-5)
}

element Window -> Root;
element Text -> Widget {
    value: String
}